[package]
name = "git-pm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
color-eyre = "0.5.11"
env_logger = "0.9.0"
eyre = "0.6.5"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
structopt = "0.3.23"
syntect = "4.6.0"
thiserror = "1.0.29"
